--- a/arch/arm64/configs/kronic_defconfig
+++ b/arch/arm64/configs/kronic_defconfig
@@ -5188,3 +5188,7 @@ CONFIG_WLAN_FEATURE_SAE=y
 # CONFIG_QCA_CLD_DEBUG is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
+CONFIG_NET_SCH_CAKE=y
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_CAKE=y
+CONFIG_DEFAULT_NET_SCH="cake"
